--- a/qvin_sample_accessioning/pubspec.yaml
+++ b/qvin_sample_accessioning/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
 
   image_picker: ^0.8.6
 
+  # For live QR code scanning.
+  mobile_scanner: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
